# bellissimo

./: .gitignore  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  setup.cfg
app/: auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
