[tool.poetry]
name = "bellissimo"
version = "0.1.0"
description = "Meal planner for slackers"
authors = ["Cabeda"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.1"
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
